--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,8 +1,14 @@
 <h1>Students</h1>
-<ul>
 <% @students.each do |student| %>
-  <li>
-    <%= link_to student.name, student_path(student) %>
-  </li>
+  <ul id="student_#{student.id}">
+    <li>
+      <%= link_to student.name, student_path(student) %>
+    </li>
+    <li>
+      <%= link_to "Edit", edit_student_path(student) %>
+    </li>
+    <li>
+      <%= link_to "Delete", student_path(student), method: :delete %>
+    </li>
+  </ul>
 <% end %>
-</ul>
