--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li>
+          <%= link_to "All Students", students_path %>
+        </li>
+        <li>
+          <%= link_to "Create a New Student", new_student_path %>
+        </li>
+      </ul>
+    </nav>
+    
     <%= yield %>
   </body>
 </html>
