add courses to student show page

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @student.name %></h1>
 
 <%= render partial: 'address', collection: @student.addresses %>
+<%= render partial: 'course', collection: @student.courses %>
